Removes kebab on roles and fixes pagination icon spacing

--- a/less/case-overview-template.less
+++ b/less/case-overview-template.less
@@ -109,9 +109,11 @@
   padding-top: @pf-spacer-xs;
   padding-bottom: @pf-spacer-xs;
    //adjust size of chevron arrows
-  .card-pf-link-with-icon .fa, .card-pf-link-with-icon .pficon {
+  .fa, .pficon {
     font-size: @icon-size-md;
     position: relative;
+    padding-left: @pf-spacer-xs;
+    padding-right: @pf-spacer-xs;
   }
 }
 
